Show all the fighters on the page

--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,19 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.fighter-flexbox {
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+}
+
+.fighter-name {
+  flex-basis: 10%;
+}
+
+.fighter-text {
+  padding: 10px;
+}
