--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,11 @@ code {
     monospace;
 }
 
+.smash-app-max-width {
+  margin: 0 auto;
+  max-width: 1000px;
+}
+
 .fighter-flexbox {
   padding: 10px;
   display: flex;
@@ -27,4 +32,59 @@ code {
 
 .fighter-text {
   padding: 10px;
+}
+
+.attribute-flexbox {
+  padding: 15px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+}
+
+.attribute-name {
+  flex-basis: 20%;
+}
+
+.attribute-button {
+  border: 3px solid #000;
+	font-size: inherit;
+	color: #000;
+	background: none;
+	cursor: pointer;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	font-weight: 700;
+	outline: none;
+	position: relative;
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	transition: all 0.3s;
+}
+
+.attribute-button:hover,
+.attribute-button:active {
+	color: #fff;
+	background: #000;
+}
+
+.selected-attribute-button {
+  border: 3px solid #000;
+  font-size: inherit;
+  color: #fff;
+  background: none;
+  cursor: pointer;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 700;
+  outline: none;
+  position: relative;
+  background: #000;
+}
+
+.attribute-type {
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 700;
+  padding-top: 5px;
 }
