--- a/src/index.css
+++ b/src/index.css
@@ -18,22 +18,6 @@ code {
   max-width: 1000px;
 }
 
-.fighter-flexbox {
-  padding: 10px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: flex-start;
-}
-
-.fighter-name {
-  flex-basis: 10%;
-}
-
-.fighter-text {
-  padding: 10px;
-}
-
 .attribute-flexbox {
   padding: 15px;
   display: flex;
@@ -87,4 +71,27 @@ code {
   letter-spacing: 1px;
   font-weight: 700;
   padding-top: 5px;
+}
+
+.ranking-table {
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto;
+  grid-gap: 10px;
+  align-items: center;
+  justify-items: center;
+}
+
+.ranking-item-picture {
+  grid-column-start: 1;
+  grid-column-end: span 1;
+  grid-row-start: auto;
+  grid-row-end: span 1;
+}
+
+.ranking-item-name {
+  grid-column-start: 2;
+  grid-column-end: span 1;
+  grid-row-start: auto;
+  grid-row-end: span 1;
 }
