--- a/src/index.css
+++ b/src/index.css
@@ -65,56 +65,50 @@ code {
   background: #000;
 }
 
-.attribute-type {
+.attribute-title {
   text-transform: uppercase;
   letter-spacing: 1px;
   font-weight: 700;
   padding-top: 5px;
 }
 
-.ranking-table {
-  display: grid;
-  grid-template-columns: auto;
-  grid-template-rows: auto;
-  grid-gap: 10px;
-  align-items: center;
-  justify-items: center;
+table {
+  width: 100%;
+  border-collapse:collapse
 }
 
-.ranking-item-picture {
-  grid-column-start: 1;
-  grid-column-end: span 1;
-  grid-row-start: auto;
-  grid-row-end: span 1;
-}
-
-.ranking-item-name {
-  grid-column-start: 2;
-  grid-column-end: span 1;
-  grid-row-start: auto;
-  grid-row-end: span 1;
-}
-
-.ranking-item-series {
-  grid-column-start: 3;
-  grid-column-end: span 1;
-  grid-row-start: auto;
-  grid-row-end: span 1;
-}
-
-.ranking-item-selected-stat {
-  grid-column-start: 4;
-  grid-column-end: span 1;
-  grid-row-start: auto;
-  grid-row-end: span 1;
-  font-size: large;
-  font-weight: 700;
-}
-
-.table-header {
-  font-weight: 400;
+th {
+  font-weight: 600;
   color: #fff;
-  border: 1px solid #000;
+  border: 4px solid #000;
   background: #000;
-  justify-self: stretch;
+  border: none;
+  text-transform: capitalize;
+}
+
+tr {
+  -webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	transition: all 0.3s;
+}
+
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+tr:hover {
+  background-color: #848587;
+}
+
+.unofficial-stat-tables {
+  padding: 15px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+}
+
+.unofficial-stat-table {
+  flex-basis: 50%;
+  padding: 5px;
 }
